Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6320

Default directory striping alone wasn't inherited by child directories

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.7.0
    • None
    • 3
    • 17680

      If the parent has default stripeEA, when creating the sub directory, we should use master object MDT index as the master stripe MDT index, instead of the one in the default stripeEA, which might be -1.

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: